latest profile update

--- a/Source Code/css/dashboard.css
+++ b/Source Code/css/dashboard.css
@@ -9,7 +9,7 @@
     --color-warning: #f3e13c;
     --color-white: #fff;
     --color-info-dark: #49666b;;
-    --color-info-light: #dce1eb;
+    --color-info-light: #e3e7f0;
     --color-dark: rgb(20, 17, 17);
     --color-light: rgba(132, 139, 200, 0.18);
     --color-info-light: #dce1eb;
