--- a/Source Code/css/profile.css
+++ b/Source Code/css/profile.css
@@ -581,10 +581,13 @@ aside .sidebar a:hover span {
     background: var(--color-white);
     padding: 1em;
     height: 25vh;
+    font-size: 18px;
     border-radius: var(--card-border-radius);
     box-shadow: var(--box-shadow);
     transition: all 300ms ease;
     margin: 1em;
+    letter-spacing: .16em;
+    margin: 1em auto;
 }
 
 .datetoday span {
