--- a/Source Code/css/audittrail.css
+++ b/Source Code/css/audittrail.css
@@ -8,17 +8,17 @@
     --color-success: #25d15e;
     --color-warning: #f3e13c;
     --color-white: #fff;
-    --color-info-dark: #3e4a4d;;
-    --color-input-light: rgb(255, 255, 255); 
+    --color-info-dark: #49666b;;
     --color-info-light: #e3e7f0;
     --color-gray: #677381;
     --color-dark: rgb(20, 17, 17);
     --color-light: rgba(132, 139, 200, 0.18);
-    --color-light-blue: #3b9ae7;
-    --color-light-red: #f59494;
+    --color-input-light: rgb(255, 255, 255);
     --color-primary-variant: #111e88;
     --color-dark-variant: #677483;
     --color-background: #f6f6f9;
+    --color-light-blue: #3b9ae7;
+    --color-light-red: #f59494;
 
     --card-border-radius: 2rem;
     --border-radius-1: 0.4rem;
@@ -33,8 +33,6 @@
     --fs-text3: .80rem;
 
     --box-shadow: 0 2rem 3rem var(--color-light);
-    --box-shadow-heavy: 0 4rem 6rem var(--color-light)
-    
 }
 /*  DARK MODE  */
 .darkmode {
@@ -48,9 +46,7 @@
 
 
 /* General Properties */
-*, 
-*::before,
-*::after {
+* {
     margin: 0;
     padding: 0;
     outline: 0;
@@ -118,33 +114,11 @@ small {
     font-size: 0.75rem;
 }
 
-
-/*   Style for Icon Buttons   */
-.edit, 
-.archive,
-.restore {
-    color: var(--color-success);
-    background: var(--color-white);
-    cursor: pointer;
-}
-
-.archive {
-    color: var(--color-primary);
-}
-
-.restore {
-    color: var(--color-warning);
-}
-
 .profile-photo {
     width: 2.8rem;
     height: 2.8rem;
     border-radius: 50%;
     overflow: hidden;
-}
-
-.profile-photo button {
-    cursor: pointer;
 }
 
 .text-muted {
@@ -175,6 +149,24 @@ b {
 
 .primary-variant {
     color: var(--color-primary-variant);
+}
+
+
+/*   Style for Icon Buttons   */
+.edit, 
+.archive,
+.restore {
+    color: var(--color-success);
+    background: var(--color-white);
+    cursor: pointer;
+}
+
+.archive {
+    color: var(--color-primary);
+}
+
+.restore {
+    color: var(--color-warning);
 }
 
 aside {
@@ -250,37 +242,16 @@ aside .sidebar a:hover span {
     margin-left: 1rem;
 }
 /*  Start of Main  */
-main {
-    margin-top: 1rem;
-}
-/*  Section Account Records  */
-.tableaccountrecords {
-    margin-top: 1em;
-}
-
-.accountrecordsbg {
-    background: var(--color-white);
-    padding: 1em;
-    height: 40vh;
-    border-radius: var(--card-border-radius);
-    box-shadow: var(--box-shadow);
-    transition: all 300ms ease;
-    margin-bottom: .5em;
-}
-
-.accountrecordsbg:hover {
-    box-shadow: none;
-}
-
 /*  Profile Form  */
 .formprofile {
     padding: 1em;
     height: 80%;
-    margin-left: 5em;
     width: 90%;
     display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
     justify-content: end;
-    gap: 1em;
+    gap: 3em;
 }
 
 .formprofile input ,#ut {
@@ -290,8 +261,7 @@ main {
     border-radius: var(--border-radius-2);
     box-shadow: var(--box-shadow);
     background: var(--color-input-light);
-    margin: 0 10em;
-    margin-right: 1.5em;
+    margin: 0 2em;
     color: var(--color-gray);
     font-weight: bold;
     text-align: center;
@@ -299,131 +269,51 @@ main {
 
 ::placeholder {
     text-align: left;
-    padding: 2em;
+    padding: 3em;
+    opacity: .70;
+}
+
+.ut {
     opacity: .70;
 }
 
 .formprofile span {
-    margin-right: 1em;
-}
-
-.markdown {
-    position: fixed;
-    right: 41%;
-    color: var(--color-primary);
-}
-
-.buttonflex {
-    text-align: right;
-}
-
-.markdown-editprofile {
-    position: fixed;
-    right: 35%;
-    color: var(--color-primary);
-}
-
-.profilepicture {
     position: absolute;
-    height: 28vh;
-    width: 15vw;
-    border-radius: 50%;
-    margin-left: 5em;
 }
-/* Searchbar Style */
-.accrecsearch {
-    display: flex;
-    gap: 22em;
+/*  Section Transaction  */
+.tableaudittrail {
+    margin-top: 1em;
 }
 
-.searchbar {
-    display: flex;
-    gap: .5em;
-    margin: .4em;
-}
-
-.profilepicture input {
-    background: rgb(163, 158, 158);
-    border: 1px solid var(--color-primary);
-    width: 14vw;
-    border-radius: 4px;
-}
-
-.searchbar input {
-    padding: .3em;
-    font-family: inherit;
-    border: 2px solid var(--color-primary);
-    width: 15vw;
-    border-radius: 5px;
-    background: var(--color-input-light);
-    color: var(--color-dark);
-}
-
-.searchbar span {
-    color: var(--color-primary);
-    font-size: 30px;
-    font-weight: bold;
-}
-
-/* Color of Buttons */
-.save {
-    border: 2px solid var(--color-info-light);  
-    width: 8vw;
-    color: var(--color-white);
-    background: var(--color-success);
-    padding: .5em;
-    border-radius: 4px;
-    font-weight: bold;
-    cursor: pointer;
-    margin-left: 21em;
-}
-
-.savechanges, .cancel, .yes ,.no {
-    border: 2px solid var(--color-info-light);  
-    width: 8vw;
-    color: var(--color-white);
-    background: var(--color-success);
-    padding: .5em;
-    border-radius: 4px;
-    font-weight: bold;
-    cursor: pointer;
-}
-
-.cancel {
-    background: var(--color-gray);
-}
-
-.yes {
-    background: var(--color-light-blue);
-}
-
-
-.no {
-    background: var(--color-light-red);
-}
-
-.profilepicture span {
-    font-size: 190px;
-    color: var(--color-primary);
-    background: var(--color-info-light);
-    border-radius: 50%;
+.table-profile {
+    background: var(--color-white);
+    padding: 1em;
+    height: 87vh;
+    border-radius: var(--card-border-radius);
     box-shadow: var(--box-shadow);
+    transition: all 300ms ease;
 }
 
-/*  Table User Account  */
+.table-profile:hover {
+    box-shadow: none;
+}
+
+/*  Table Transaction  */
 .content-table {
+    margin-left: .5em;
     border-collapse: collapse;
-    font-size: .9em;
+    font-size: 1em;
     width: 100%;
+    height: 545px;
     display: block;
-    height: 240px;
     overflow: auto;
+    text-align: center;
 }
 
 .content-table thead tr {
     background-color: var(--color-primary);
     color: var(--color-background);
-    text-align: center;
+    text-align: left;
     font-weight: bold;
     text-transform: uppercase;
 }
@@ -439,112 +329,15 @@ main {
 
 .content-table th,
 .content-table td {
-    text-align: center;
-    padding: 12px 26px;
+    text-align: left;
+    padding: 12px 46px;
     border-bottom: 1px solid rgb(238, 233, 233);
 }
 
-
-.table-archive th, 
-.table-archive td {
-    padding: 12px 56px;
-}
-
-/* Start of Right */
-.right {
-    margin-top: 1.4rem;
-}
-
-.right .top {
-    display: flex;
-    gap: 1rem;
-}
-
-#menu-btn {
-    display: none;
-}
-
-.right #dark-mode-toggle {
-    background: var(--color-info-light);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 1.6rem;
-    width: 4.2rem;
-    cursor: pointer;
-    border-radius: var(--border-radius-1);
-}
-
-.right #dark-mode-toggle span {
-    font-size: 1.2rem;
-    width: 50%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-   
-.right #dark-mode-toggle span.active {
-    background: var(--color-primary);
-    color: rgb(255, 255, 255);
-    border-radius: var(--border-radius-2);
-}
-
-.right .top .profile {
-    display: flex;
-    gap: 2rem;
-    text-align: right;
-}
-
-.right .top .profile p {
-    font-size: var(--fs-text2);
-    color: var(--color-dark);
-}
-
-.text-muted {
-    color: var(--color-dark);
-}
-
-/*  Date  */
-.rectangle-border {
-    background: linear-gradient(to right bottom, 
-    rgba(157, 237, 243, 0.9), 
-    rgba(42, 160, 173, 0.9)
-    );
-    height: 1rem;
-    width: 90%;
-    border-radius: 10px;
-    margin: 1em auto;
-}
-
-.datetoday {
-    background: var(--color-white);
-    padding: 1em;
-    height: 25vh;
-    font-size: 18px;
-    border-radius: var(--card-border-radius);
-    box-shadow: var(--box-shadow);
-    transition: all 300ms ease;
-    letter-spacing: .16em;
-    margin: 1em auto;
-}
-
-.datetoday span {
-    background: var(--color-warning);
-    padding: 0.5rem;
-    border-radius: 50%;
-    color: var(--color-white);
-    font-size: 1.5rem;
-}
-
-.datetoday:hover {
-    box-shadow: none;
-}
-
-.date-today {
-    margin: .5em;
-    font-size: var(--fs-text1);
-    font-weight: bolder;
+.searchbar span {
+    color: var(--color-primary);
+    font-size: 30px;
+    font-weight: bold;
 }
 
 /* Buttons */
@@ -572,6 +365,11 @@ main {
     gap: 1.3em;
     width: 220px;
     margin: 2em auto;
+    box-shadow: var(--box-shadow);
+}
+
+.buttonmodify button:hover {
+    box-shadow: none;
 }
 
 .modal {
@@ -589,7 +387,7 @@ main {
 .modal-content {
     background: var(--color-white);
     margin-top: 100px;
-    width: 65%;
+    width: 61%;
     margin-left: auto;
     margin-right: auto;
     padding: 8px 24px;
@@ -621,21 +419,6 @@ main {
 
 .modal-footer .modal-close {
     padding: .5em 1em;
-}
-
-#modal0 .modal-close {
-    margin-left: 53%;
-}
-
-#modal0 .modal-body img {
-    height: 25rem;
-    width: 20rem;
-    margin: 0 auto;
-    box-shadow: var(--box-shadow-heavy);
-}
-
-#modal0 .modal-content {
-    width: 40%;
 }
 
 #modal2 .modal-content {
@@ -680,8 +463,180 @@ main {
 
 
 .buttonflex {
-    margin-top: 1em;
+    margin: 0 auto;
 }
+
+.buttonflexright {
+    text-align: right;
+}
+
+/* Searchbar Style */
+.accrecsearch {
+    display: flex;
+    gap: 22em;
+}
+
+.searchbar {
+    display: flex;
+    gap: .5em;
+    margin: .4em;
+}
+
+.profilepicture input {
+    background: rgb(163, 158, 158);
+    border: 1px solid var(--color-primary);
+    width: 14vw;
+    border-radius: 4px;
+}
+
+.searchbar input {
+    padding: .3em;
+    font-family: inherit;
+    border: 2px solid var(--color-primary);
+    width: 15vw;
+    border-radius: 5px;
+    background: var(--color-input-light);
+    color: var(--color-gray);
+}
+
+.searchbar span {
+    color: var(--color-primary);
+    font-size: 30px;
+    font-weight: bold;
+}
+
+/* Start of Right */
+.right {
+    margin-top: 1.4rem;
+}
+
+.right .top {
+    display: flex;
+    gap: 1rem;
+}
+
+#menu-btn {
+    display: none;
+}
+
+.right #dark-mode-toggle {
+    background: var(--color-info-light);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 1.6rem;
+    width: 4.2rem;
+    cursor: pointer;
+    border-radius: var(--border-radius-1);
+}
+
+.right #dark-mode-toggle span {
+    font-size: 1.2rem;
+    width: 50%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.right #dark-mode-toggle span.active {
+    background: var(--color-primary);
+    color: rgb(255, 255, 255);
+    border-radius: var(--border-radius-2);
+}
+
+.right .top .profile {
+    display: flex;
+    gap: 2rem;
+    text-align: right;
+}
+
+.right .top .profile p {
+    font-size: var(--fs-text2);
+    color: var(--color-dark);
+}
+
+.text-muted {
+    color: var(--color-dark);
+}
+
+/*  Date  */
+.rectangle-border {
+    background: linear-gradient(to right bottom, 
+    rgba(157, 237, 243, 0.9), 
+    rgba(42, 160, 173, 0.9)
+    );
+    height: 1rem;
+    width: 90%;
+    border-radius: 10px;
+    margin: 1em auto;
+}
+
+.datetoday {
+    background: var(--color-white);
+    padding: 1em;
+    height: 25vh;
+    font-size: 18px;
+    border-radius: var(--card-border-radius);
+    box-shadow: var(--box-shadow);
+    transition: all 300ms ease;
+    margin: 1em;
+    letter-spacing: .16em;
+    margin: 1em auto;
+}
+
+.datetoday span {
+    background: var(--color-warning);
+    padding: 0.5rem;
+    border-radius: 50%;
+    color: var(--color-white);
+    font-size: 1.5rem;
+}
+
+.datetoday:hover {
+    box-shadow: none;
+}
+
+.date-today {
+    margin: .5em;
+    font-size: var(--fs-text1);
+    font-weight: bolder;
+}
+
+
+/* Color of Buttons */
+.save, 
+.savechanges,
+.yes, 
+.no,
+.cancel {
+    border: 2px solid var(--color-info-light);  
+    width: 8vw;
+    color: var(--color-white);
+    background: var(--color-success);
+    padding: .5em;
+    border-radius: 4px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.savechanges {
+    background: var(--color-success);  
+}
+
+.cancel {
+    background: var(--color-gray);
+}
+
+.yes {
+    background: var(--color-light-blue);
+}
+
+.no {
+    background: var(--color-light-red);
+}
+
+
 
 /*  Media Queries  */
 @media screen and (max-width: 1200px) {
@@ -709,32 +664,6 @@ main {
     aside .sidebar a:last-child {
         position: relative;
         margin-top: 5rem;
-    }
-
-    main .insights {
-        grid-template-columns: 1fr;
-    }
-
-    main .listoftrans {
-        width: 96%;
-        position: absolute;
-        left: 50%;
-        transform: translateX(-50%);
-        margin: 2rem 0 0 10rem;
-    }
-
-    main .listoftrans table {
-        width: 83vw;
-    }
-
-    main table thead tr td:last-child,
-    main table thead tr td:first-child {
-        display: none;
-    }
-
-    main table tbody tr td:last-child,
-    main table tbody tr td:first-child {
-        display: none;
     }
 }
 
@@ -792,17 +721,7 @@ main {
         padding: 0 1rem;
     }
 
-    main .listoftrans {
-        position: relative;
-        margin: 3rem 0 0 0;
-        width: 100%;
-    }
-
-    main .listoftrans table {
-        width: 100%;
-        margin: 0;
-    }
-
+    
     #menu-btn {
         display: inline;
     }
