--- a/Source Code/css/stockandaddstock.css
+++ b/Source Code/css/stockandaddstock.css
@@ -449,11 +449,13 @@ aside .sidebar a:hover span {
     margin-left: 50%;
 }
 
-#modal4 .modal-content {
+#modal4 .modal-content,
+#modal5 .modal-content {
     width: 70%;
 }
 
-#modal4 .modal-header {
+#modal4 .modal-header,
+#modal5 .modal-header {
     padding: 1em;
     display: flex;
     gap: 20em;
@@ -592,7 +594,7 @@ aside .sidebar a:hover span {
     background: var(--color-white);
     padding: 1em;
     height: 25vh;
-    font-size: 18px;
+    font-size: 17px;
     border-radius: var(--card-border-radius);
     box-shadow: var(--box-shadow);
     transition: all 300ms ease;
@@ -652,6 +654,11 @@ aside .sidebar a:hover span {
     background: var(--color-light-red);
 }
 
+
+.rightbottom h3 {
+    font-size: var(--fs-text2);
+    font-weight: none;
+}
 
 
 /*  Media Queries  */
