--- a/Source Code/css/reports.css
+++ b/Source Code/css/reports.css
@@ -155,8 +155,7 @@ b {
 /*   Style for Icon Buttons   */
 .edit, 
 .archive,
-.restore,
-.remove {
+.restore {
     color: var(--color-success);
     background: var(--color-white);
     cursor: pointer;
@@ -168,10 +167,6 @@ b {
 
 .restore {
     color: var(--color-warning);
-}
-
-.remove {
-    color: var(--color-danger);
 }
 
 aside {
@@ -249,14 +244,14 @@ aside .sidebar a:hover span {
 /*  Start of Main  */
 /*  Profile Form  */
 .formprofile {
-    margin-top: 1em;
     padding: 1em;
     height: 80%;
     width: 90%;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     align-items: center;
-    gap: 1em;
+    justify-content: end;
+    gap: 3em;
 }
 
 .formprofile input ,#ut {
@@ -266,15 +261,11 @@ aside .sidebar a:hover span {
     border-radius: var(--border-radius-2);
     box-shadow: var(--box-shadow);
     background: var(--color-input-light);
-    margin: 0 1.8em;
+    margin: 0 2em;
     color: var(--color-gray);
     font-weight: bold;
     text-align: center;
-    margin-left: 3em;
-    margin-bottom: 2.6em;
 }
-
-
 
 ::placeholder {
     text-align: left;
@@ -286,23 +277,32 @@ aside .sidebar a:hover span {
     opacity: .70;
 }
 
-.markdown {
-    color: var(--color-primary);
-    margin-left: 8.5em;
-}
-
 .formprofile span {
     position: absolute;
 }
+
+.searchbar {
+    height: 4vh;
+    width: 15vw;
+    border: 2px solid var(--color-primary);
+    border-radius: var(--border-radius-2);
+    box-shadow: var(--box-shadow);
+    background: var(--color-input-light);
+    margin: 0 2em;
+    color: var(--color-gray);
+    font-weight: bold;
+    text-align: center;
+}
+
 /*  Section Transaction  */
-.tableprofile {
+.tableaudittrail {
     margin-top: 1em;
 }
 
 .table-profile {
     background: var(--color-white);
     padding: 1em;
-    height: 41vh;
+    height: 90vh;
     border-radius: var(--card-border-radius);
     box-shadow: var(--box-shadow);
     transition: all 300ms ease;
@@ -314,11 +314,12 @@ aside .sidebar a:hover span {
 
 /*  Table Transaction  */
 .content-table {
+    margin-left: .5em;
     border-collapse: collapse;
-    font-size: .90em;
+    font-size: 1em;
     width: 100%;
+    height: 545px;
     display: block;
-    height: 250px;
     overflow: auto;
     text-align: center;
 }
@@ -326,7 +327,7 @@ aside .sidebar a:hover span {
 .content-table thead tr {
     background-color: var(--color-primary);
     color: var(--color-background);
-    text-align: center;
+    text-align: left;
     font-weight: bold;
     text-transform: uppercase;
 }
@@ -342,28 +343,15 @@ aside .sidebar a:hover span {
 
 .content-table th,
 .content-table td {
-    padding: 7px 20px;
+    text-align: left;
+    padding: 12px 46px;
     border-bottom: 1px solid rgb(238, 233, 233);
-}
-
-
-.table-archive th, 
-.table-archive td {
-    padding: 12px 20px;
-    margin: auto;
-}
-
-
-.searchbar span {
-    color: var(--color-primary);
-    font-size: 30px;
-    font-weight: bold;
 }
 
 /* Buttons */
 .buttons {
     background: var(--color-white);
-    height: 46vh;
+    height: 43vh;
     border-radius: var(--card-border-radius);
     box-shadow: var(--box-shadow);
     transition: all 300ms ease;
@@ -377,29 +365,22 @@ aside .sidebar a:hover span {
 .buttonmodify button {
     background: linear-gradient(to right bottom, rgb(71, 189, 216),var(--color-primary));
     color: var(--color-white);
-    padding: 1.5em;
+    padding: 2em;
     border-radius: 10px;
     font-weight: bold;
     cursor: pointer;
+    font-size: var(--fs-text3);
     display: flex;
     gap: 2em;
-    width: 200px;
-    margin: 0 auto;
+    width: 220px;
+    margin: 2em auto;
     box-shadow: var(--box-shadow);
+    text-align: center;
+    height: 11vh;
 }
-
 
 .buttonmodify button:hover {
     box-shadow: none;
-}
-
-
-.buttonscart {
-    display: flex;
-    position: absolute;
-    top: 36%;
-    gap: 2em;
-    margin-left: 1em;
 }
 
 .modal {
@@ -453,7 +434,6 @@ aside .sidebar a:hover span {
 
 #modal2 .modal-content {
     width: 40%;
-    z-index: 50;
 }
 
 
@@ -472,18 +452,7 @@ aside .sidebar a:hover span {
 #modal4 .modal-header {
     padding: 1em;
     display: flex;
-    gap: 28em;
-}
-
-
-#modal5 .modal-content {
-    width: 70%;
-}
-
-#modal5 .modal-header {
-    padding: 1em;
-    display: flex;
-    gap: 21em;
+    gap: 30em;
 }
 
 #modal3 {
@@ -505,8 +474,7 @@ aside .sidebar a:hover span {
 
 
 .buttonflex {
-    margin: 2em;
-    text-align: right;
+    margin: 0 auto;
 }
 
 .buttonflexright {
@@ -519,12 +487,6 @@ aside .sidebar a:hover span {
     gap: 22em;
 }
 
-.searchbar {
-    display: flex;
-    gap: .5em;
-    margin: .4em;
-}
-
 .profilepicture input {
     background: rgb(163, 158, 158);
     border: 1px solid var(--color-primary);
@@ -532,21 +494,6 @@ aside .sidebar a:hover span {
     border-radius: 4px;
 }
 
-.searchbar input {
-    padding: .3em;
-    font-family: inherit;
-    border: 2px solid var(--color-primary);
-    width: 15vw;
-    border-radius: 5px;
-    background: var(--color-input-light);
-    color: var(--color-gray);
-}
-
-.searchbar span {
-    color: var(--color-primary);
-    font-size: 30px;
-    font-weight: bold;
-}
 
 /* Start of Right */
 .right {
@@ -645,39 +592,6 @@ aside .sidebar a:hover span {
     font-size: var(--fs-text1);
     font-weight: bolder;
 }
-
-
-/* Start of Reservation Section */
-
-.schedule-header {
-    display: flex;
-    gap: 1em;
-}
-
-.schedule-header button {
-    height: 6vh;
-    width: 150px;
-    margin: 0;
-    padding: .5em;
-}
-.schedule-header span {
-    margin-left: .7em;
-}
-
-.schedinfo {
-    background: var(--color-white);
-    height: 39vh;
-    border-radius: var(--card-border-radius);
-    box-shadow: var(--box-shadow);
-    transition: all 300ms ease;
-    margin: 1em;
-    width: 23vw;
-}
-
-.schedinfo:hover {
-    box-shadow: none;
-}
-
 
 
 /* Color of Buttons */
