--- a/Source Code/css/settings.css
+++ b/Source Code/css/settings.css
@@ -249,14 +249,15 @@ aside .sidebar a:hover span {
 /*  Start of Main  */
 /*  Profile Form  */
 .formprofile {
-    margin-top: 1em;
+    margin-top: .5em;
     padding: 1em;
     height: 80%;
     width: 90%;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     align-items: center;
-    gap: 1em;
+    justify-content: end;
+    gap: 3em;;
 }
 
 .formprofile input ,#ut {
@@ -266,12 +267,10 @@ aside .sidebar a:hover span {
     border-radius: var(--border-radius-2);
     box-shadow: var(--box-shadow);
     background: var(--color-input-light);
-    margin: 0 1.8em;
+    margin: 0 2em;
     color: var(--color-gray);
     font-weight: bold;
     text-align: center;
-    margin-left: 3em;
-    margin-bottom: 2.6em;
 }
 
 
@@ -299,7 +298,8 @@ aside .sidebar a:hover span {
     margin-top: 1em;
 }
 
-.table-profile {
+.table-profile,
+.table-profile-category {
     background: var(--color-white);
     padding: 1em;
     height: 41vh;
@@ -312,11 +312,15 @@ aside .sidebar a:hover span {
     box-shadow: none;
 }
 
+.table-profile-category {
+    display: flex;
+}
+
 /*  Table Transaction  */
 .content-table {
     border-collapse: collapse;
     font-size: .90em;
-    width: 100%;
+    width: 50%;
     display: block;
     height: 250px;
     overflow: auto;
@@ -342,7 +346,7 @@ aside .sidebar a:hover span {
 
 .content-table th,
 .content-table td {
-    padding: 7px 20px;
+    padding: 12px 29px;
     border-bottom: 1px solid rgb(238, 233, 233);
 }
 
@@ -363,11 +367,12 @@ aside .sidebar a:hover span {
 /* Buttons */
 .buttons {
     background: var(--color-white);
-    height: 46vh;
+    height: 43vh;
     border-radius: var(--card-border-radius);
     box-shadow: var(--box-shadow);
     transition: all 300ms ease;
     margin: 1em;
+    padding: 3em;
 }
 
 .buttons:hover {
@@ -377,29 +382,24 @@ aside .sidebar a:hover span {
 .buttonmodify button {
     background: linear-gradient(to right bottom, rgb(71, 189, 216),var(--color-primary));
     color: var(--color-white);
-    padding: 1.5em;
+    padding: 2em;
     border-radius: 10px;
     font-weight: bold;
     cursor: pointer;
     display: flex;
-    gap: 2em;
-    width: 200px;
-    margin: 0 auto;
+    gap: 1.3em;
+    width: 220px;
+    margin: 2em auto;
     box-shadow: var(--box-shadow);
 }
 
+.trans{
+    color: transparent;
+    background: transparent;
+}
 
 .buttonmodify button:hover {
     box-shadow: none;
-}
-
-
-.buttonscart {
-    display: flex;
-    position: absolute;
-    top: 36%;
-    gap: 2em;
-    margin-left: 1em;
 }
 
 .modal {
@@ -450,10 +450,10 @@ aside .sidebar a:hover span {
 .modal-footer .modal-close {
     padding: .5em 1em;
 }
+ 
 
 #modal2 .modal-content {
     width: 40%;
-    z-index: 50;
 }
 
 
@@ -462,47 +462,20 @@ aside .sidebar a:hover span {
 }
 
 #modal2 .modal-header .modal-close {
-    margin-left: 50%;
+    margin-left: 60%;
 }
 
-#modal4 .modal-content {
-    width: 80%;
-}
-
-#modal4 .modal-header {
-    padding: 1em;
-    display: flex;
-    gap: 28em;
-}
-
-
+#modal4 .modal-content,
 #modal5 .modal-content {
     width: 70%;
 }
 
+#modal4 .modal-header,
 #modal5 .modal-header {
     padding: 1em;
     display: flex;
-    gap: 21em;
+    gap: 20em;
 }
-
-#modal3 {
-    z-index: 10;
-}
-
-#modal3 .modal-content {
-    width: 45%;
-}
-
-
-#modal3 .modal-body {
-    padding: 2em;
-}
-
-#modal3 .modal-header .modal-close {
-    margin-left: 50%;
-}
-
 
 .buttonflex {
     margin: 2em;
@@ -647,39 +620,6 @@ aside .sidebar a:hover span {
 }
 
 
-/* Start of Reservation Section */
-
-.schedule-header {
-    display: flex;
-    gap: 1em;
-}
-
-.schedule-header button {
-    height: 6vh;
-    width: 150px;
-    margin: 0;
-    padding: .5em;
-}
-.schedule-header span {
-    margin-left: .7em;
-}
-
-.schedinfo {
-    background: var(--color-white);
-    height: 39vh;
-    border-radius: var(--card-border-radius);
-    box-shadow: var(--box-shadow);
-    transition: all 300ms ease;
-    margin: 1em;
-    width: 23vw;
-}
-
-.schedinfo:hover {
-    box-shadow: none;
-}
-
-
-
 /* Color of Buttons */
 .save, 
 .savechanges,
@@ -712,6 +652,11 @@ aside .sidebar a:hover span {
     background: var(--color-light-red);
 }
 
+
+.rightbottom h3 {
+    font-size: var(--fs-text2);
+    font-weight: none;
+}
 
 
 /*  Media Queries  */
