--- a/Source Code/css/update.css
+++ b/Source Code/css/update.css
@@ -332,7 +332,7 @@ aside .sidebar a:hover span {
 
 .content-table th,
 .content-table td {
-    padding: 8px 10px;
+    padding: 7px 9px;
     border-bottom: 1px solid rgb(238, 233, 233);
 }
 
@@ -363,7 +363,7 @@ aside .sidebar a:hover span {
     box-shadow: none;
 }
 
-.buttonmodify a {
+.buttonmodify button {
     background: linear-gradient(to right bottom, rgb(71, 189, 216),var(--color-primary));
     color: var(--color-white);
     padding: 2em;
@@ -384,7 +384,6 @@ aside .sidebar a:hover span {
     left: 0;
     background: rgba(0, 0, 0, 0.5);
     z-index: 2;
-    display: none;
     box-shadow: 0 0 50rem var(--color-dark);
 }
 
