--- a/Source Code/css/useraccount.css
+++ b/Source Code/css/useraccount.css
@@ -306,6 +306,7 @@ aside .sidebar a:hover span {
     position: absolute;
     justify-content: right;
     margin-left: 21em;
+    z-index: 10;
 }
 
 .statusmessagesuccess button {
@@ -359,9 +360,8 @@ aside .sidebar a:hover span {
 
 .profilepicture {
     position: absolute;
-    height: 28vh;
-    width: 15vw;
-    border-radius: 50%;
+    height: 10%;
+    width: 10%;
     margin-left: 5em;
 }
 /* Searchbar Style */
@@ -442,6 +442,21 @@ aside .sidebar a:hover span {
     background: var(--color-info-light);
     border-radius: 50%;
     box-shadow: var(--box-shadow);
+}
+
+.updatephoto {
+    position: absolute;
+    height: 15rem;
+    width: 15rem;
+    border-radius: 50%;
+    overflow: hidden;
+    margin-top: 2.5em;
+    border: 2px solid var(--color-primary);
+    box-shadow: var(--box-shadow-heavy);
+}
+
+.updatephoto:hover {
+    box-shadow: none;
 }
 
 .uploadbtn {
@@ -682,6 +697,19 @@ aside .sidebar a:hover span {
 
 #modal0 .modal-content {
     width: 40%;
+}
+
+#modal1 .modal-header {
+    display: inline;
+}
+#modal1 .modal-header button {
+    position: absolute;
+    right: 23em;
+    top: 9em;
+}
+
+#modal1 .modal-content{
+    width: 60%;
 }
 
 #modal2 .modal-content {
