--- a/Source Code/css/useraccount.css
+++ b/Source Code/css/useraccount.css
@@ -258,7 +258,7 @@ aside .sidebar a:hover span {
 .accountrecordsbg {
     background: var(--color-white);
     padding: 1em;
-    height: 40vh;
+    height: 41vh;
     border-radius: var(--card-border-radius);
     box-shadow: var(--box-shadow);
     transition: all 300ms ease;
@@ -461,14 +461,16 @@ aside .sidebar a:hover span {
 
 .uploadbtn {
     border: 2px solid var(--color-info-light);  
-    width: 5vw;
+    position: absolute;
+    width: 6vw;
     color: var(--color-white);
     background: var(--color-primary);
     padding: .3em;
     border-radius: 4px;
     font-weight: bold;
     cursor: pointer;
-    margin-left: 3.5em;
+    margin-left: 15em;
+    margin-top: -2em;
 }
 
 /*  Table User Account  */
